--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2680,7 +2680,26 @@ html {
 	text-align: left;
 
 	form {
-		display: inline;
+		display: inline-block;
+		height: 30px;
+	}
+	&.slotIconCanDelete {
+		position: relative;
+		z-index: 400;
+		&:before {
+			background: #fff url(images/icon-minus.svg);
+			background-size: 100%;
+			border: 1px solid #fff;
+			border-radius: 40px;
+			content: "";
+			height: 15px;
+			pointer-events: none;
+			position: absolute;
+				top: -4px;
+				left: -4px;
+			width: 15px;
+			z-index: 500;
+		}
 	}
 }
 
@@ -2689,12 +2708,14 @@ input[type="submit"].slotIcon {
 	background-size: cover;
 	border: 2px solid #000;
 	border-radius: 100%;
+	box-sizing: border-box;
 	cursor: pointer;
 	display: inline-block;
 	font-size: 0;
 	height: 30px;
 	margin-right: 10px;
 	padding: 0;
+	position: relative;
 	vertical-align: top;
 	width: 30px;
 
