--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.45
+Version: 1.46
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -178,7 +178,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.45
+Version: 1.46
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -2691,7 +2691,26 @@ html .tribe-common-g-row.tribe-events-calendar-latest-past__event-row .tribe-eve
   text-align: left;
 }
 .slotToolSlot form {
-  display: inline;
+  display: inline-block;
+  height: 30px;
+}
+.slotToolSlot.slotIconCanDelete {
+  position: relative;
+  z-index: 400;
+}
+.slotToolSlot.slotIconCanDelete:before {
+  background: #fff url(images/icon-minus.svg);
+  background-size: 100%;
+  border: 1px solid #fff;
+  border-radius: 40px;
+  content: "";
+  height: 15px;
+  pointer-events: none;
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  width: 15px;
+  z-index: 500;
 }
 
 input[type=submit].slotIcon {
@@ -2699,12 +2718,14 @@ input[type=submit].slotIcon {
   background-size: cover;
   border: 2px solid #000;
   border-radius: 100%;
+  box-sizing: border-box;
   cursor: pointer;
   display: inline-block;
   font-size: 0;
   height: 30px;
   margin-right: 10px;
   padding: 0;
+  position: relative;
   vertical-align: top;
   width: 30px;
 }
@@ -2765,7 +2786,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.45
+Version: 1.46
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
