--- a/style.css
+++ b/style.css
@@ -1013,17 +1013,11 @@ input[type=checkbox] {
   width: 100%;
 }
 
-.container .container {
-  margin: 0;
-  width: 100%;
-}
-
 .container .one,
-.container .one,
-.container .two,
+.container .two.columns,
 .container .three,
 .container .four,
-.container .five,
+.container .five.columns,
 .container .six,
 .container .seven,
 .container .eight,
@@ -2018,6 +2012,7 @@ body.mobilenavopen {
 
 #comments {
   margin: 0 0 40px 0;
+  width: 100%;
 }
 #comments h3 {
   margin-bottom: 40px;
@@ -2777,6 +2772,36 @@ ul.acf-radio-list li,
 ul.acf-checkbox-list li {
   font-size: inherit;
   line-height: inherit;
+}
+
+.serviceRecord {
+  width: 100%;
+}
+
+.tcb_user_info .one-third {
+  margin-bottom: 30px;
+}
+.tcb_user_info table {
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin-bottom: 50px;
+}
+.tcb_user_info table td {
+  border: 0;
+  border-bottom: 1px solid #ccc;
+  padding: 10px;
+}
+.tcb_user_info table td:first-child {
+  font-weight: bold;
+  padding-left: 0;
+}
+
+.tcb_user_ribbons p {
+  margin-bottom: 5px;
+}
+.tcb_user_ribbons img {
+  max-width: 200px;
+  width: 200px;
 }
 
 /*
