finish service record WPCS

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2790,6 +2790,9 @@ ul.acf-checkbox-list li {
 	.one-third {
 		margin-bottom: 30px;
 	}
+	img {
+		width: auto;
+	}
 	table {
 		border:0;
 		border-top: 1px solid #ccc;
