--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2479,8 +2479,8 @@ html .wcpt-product-form select {
 	height: 30px;
 	line-height: 30px;
 	margin-bottom: 10px;
+	position: relative;
 	text-align: left;
-
 	form {
 		display: inline-block;
 		height: 30px;
@@ -2520,7 +2520,6 @@ input[type="submit"].slotIcon {
 	position: relative;
 	vertical-align: top;
 	width: 30px;
-
 	&.disabled {
 		cursor: not-allowed;
 	}
@@ -2529,11 +2528,9 @@ input[type="submit"].slotIcon {
 #slotToolButtons {
 	padding: 30px;
 	text-align: center;
-
 	a {
 		margin: 0 10px;
 	}
-
 	br {
 		display: none;
 	}
@@ -2545,7 +2542,7 @@ input[type="submit"].slotIcon {
 
 
 /* 
-	ACF Extended 
+	ACF Extended
 */
 
 .acf-field input[type=text],
@@ -2611,5 +2608,28 @@ ul.acf-checkbox-list li {
 	img {
 		max-width: 200px;
 		width: 200px;
+	}
+}
+
+.slotToolSlot.loading {
+	.slotForm {
+
+		pointer-events: none;
+		position: relative;
+	}
+	
+	&:after {
+			-webkit-animation: fa-spin 1s infinite linear;
+		animation: fa-spin 1s infinite linear;
+		background: url(images/icon-refresh4.svg); 
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-size: auto 100%;
+		content: "";
+		height: 25px;
+		position: absolute;
+			top: 3px;
+			left: 3px;
+		width: 25px;
 	}
 }
