--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.66
+Version: 1.67
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -178,7 +178,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.66
+Version: 1.67
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -2488,6 +2488,7 @@ html .wcpt-product-form select {
   height: 30px;
   line-height: 30px;
   margin-bottom: 10px;
+  position: relative;
   text-align: left;
 }
 .slotToolSlot form {
@@ -2549,7 +2550,7 @@ input[type=submit].slotIcon.disabled {
 }
 
 /* 
-	ACF Extended 
+	ACF Extended
 */
 .acf-field input[type=text],
 .acf-field input[type=password],
@@ -2613,13 +2614,32 @@ ul.acf-checkbox-list li {
   width: 200px;
 }
 
+.slotToolSlot.loading .slotForm {
+  pointer-events: none;
+  position: relative;
+}
+.slotToolSlot.loading:after {
+  -webkit-animation: fa-spin 1s infinite linear;
+  animation: fa-spin 1s infinite linear;
+  background: url(images/icon-refresh4.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: auto 100%;
+  content: "";
+  height: 25px;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 25px;
+}
+
 /*
 Theme Name: 3CB 2024 
 Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.66
+Version: 1.67
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -3196,7 +3216,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.66
+Version: 1.67
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
