--- a/sass/_events.scss
+++ b/sass/_events.scss
@@ -44,7 +44,7 @@
 	background: $pageBg;
 	padding: 0 0 50px 0;
 	.container {
-		max-width: 800px;
+		max-width: 1200px;
 	}
 	.event-banner {
 		background: #222;
@@ -133,4 +133,183 @@
 			}
 		}
 	}
+}
+
+/* 
+	Briefing
+*/
+
+.tcb_briefing {
+	background: #fff;
+	margin-bottom: 30px;
+	padding: 40px;
+	.briefing-meta {
+		padding-bottom: 15px;
+		.column {
+			padding-right: 20px;
+		}
+		.column:first-child {
+			margin-left:0;
+		}
+	}
+	.missionRow {
+		border-bottom: 1px solid #ccc;
+		margin-bottom: 20px;
+		padding-bottom: 20px;
+	}
+	h3 {
+		margin-bottom: 10px;
+	}
+}
+
+
+
+/*
+	Attendance panel
+*/
+
+#attendanceRoster {
+	background: #fff;
+	margin-bottom: 30px;
+	padding: 30px;
+	transition: all 0.2s linear;
+	a,
+	input,
+	img {
+		transition: all 0.2s linear;
+	}
+	.attendanceCol {
+		border: 1px solid #ccc;
+		margin-bottom: 20px;
+		padding: 10px 10px 80px 10px;
+		position: relative;
+		&:nth-child(2) {
+			border-left: 0;
+			border-right: 0;
+		}
+		form {
+			margin: 0;
+			position: absolute;
+				bottom: 10px;
+				left: 10px;
+			width: 100%;
+			input {
+				padding: 10px;
+			}
+		}
+	}
+	ul {
+		list-style: none;
+		margin: 0 0 30px 0;
+		li {
+			height: 20px;
+			line-height: 20px;
+			margin-bottom: 10px;
+			a {
+				display: inline-block;
+				line-height: 20px;
+			}
+		}
+	}
+	img {
+		border-radius: 100%;
+		height: 20px;
+		margin-right: 3px;
+		vertical-align: top;
+		width: 20px;
+	}
+}
+
+@media only screen and (min-width: 1200px) {
+	#attendanceRoster {
+		float:left;
+		margin-right: 1%;
+		padding: 40px;
+		width: 59%;
+		.wrap {
+			display: flex;
+		}
+		.attendanceCol {
+			flex: 1 1;
+			margin: 0;
+		}
+	}
+}
+
+/* 
+	Slotting tool
+*/
+
+#slotTool {
+	background: #fff;
+	float:left;
+	margin-left: 1%;
+	margin-bottom: 30px;
+	padding: 40px;
+	width: 39%;
+}
+
+.slotToolSlot {
+	height: 30px;
+	line-height: 30px;
+	margin-bottom: 10px;
+	position: relative;
+	text-align: left;
+	form {
+		display: inline-block;
+		height: 30px;
+	}
+	&.slotIconCanDelete {
+		position: relative;
+		z-index: 400;
+		&:before {
+			background: #fff url(images/icon-minus.svg);
+			background-size: 100%;
+			border: 1px solid #fff;
+			border-radius: 40px;
+			content: "";
+			height: 15px;
+			pointer-events: none;
+			position: absolute;
+				top: -4px;
+				left: -4px;
+			width: 15px;
+			z-index: 500;
+		}
+	}
+}
+
+input[type="submit"].slotIcon {
+	background: #fff;
+	background-size: cover;
+	border: 2px solid #000;
+	border-radius: 100%;
+	box-sizing: border-box;
+	cursor: pointer;
+	display: inline-block;
+	font-size: 0;
+	height: 30px;
+	margin-right: 10px;
+	padding: 0;
+	position: relative;
+	vertical-align: top;
+	width: 30px;
+	&.disabled {
+		cursor: not-allowed;
+	}
+}
+
+#slotToolButtons {
+	padding: 30px;
+	text-align: center;
+	a {
+		margin: 0 10px;
+	}
+	br {
+		display: none;
+	}
+}
+
+.unit {
+	margin-bottom: 30px;
 }
