--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.68
+Version: 1.70
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -178,7 +178,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.68
+Version: 1.70
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -2391,165 +2391,6 @@ html .wcpt-product-form select {
 }
 
 /* 
-	Briefing
-*/
-.tcb_briefing {
-  background: #fff;
-  margin-bottom: 30px;
-  padding: 40px;
-}
-.tcb_briefing .briefing-meta {
-  padding-bottom: 15px;
-}
-.tcb_briefing .briefing-meta .column {
-  margin: 0;
-}
-.tcb_briefing .missionRow {
-  border-bottom: 1px solid #ccc;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-}
-.tcb_briefing h3 {
-  margin-bottom: 10px;
-}
-
-/*
-	Attendance panel
-*/
-#attendanceRoster {
-  background: #fff;
-  margin-bottom: 30px;
-  padding: 30px;
-  transition: all 0.2s linear;
-}
-#attendanceRoster a,
-#attendanceRoster input,
-#attendanceRoster img {
-  transition: all 0.2s linear;
-}
-#attendanceRoster .attendanceCol {
-  margin-bottom: 20px;
-  padding: 0 0 80px 0;
-  position: relative;
-}
-#attendanceRoster .attendanceCol form {
-  margin: 0;
-  position: absolute;
-  bottom: 10px;
-  left: 0;
-  width: 100%;
-}
-#attendanceRoster .attendanceCol form input {
-  padding: 10px;
-}
-#attendanceRoster ul {
-  list-style: none;
-  margin: 0 0 30px 0;
-}
-#attendanceRoster ul li {
-  height: 20px;
-  line-height: 20px;
-  margin-bottom: 10px;
-}
-#attendanceRoster ul li a {
-  display: inline-block;
-  line-height: 20px;
-}
-#attendanceRoster img {
-  border-radius: 100%;
-  height: 20px;
-  margin-right: 3px;
-  vertical-align: top;
-  width: 20px;
-}
-
-@media only screen and (min-width: 1200px) {
-  #attendanceRoster {
-    padding: 40px;
-  }
-  #attendanceRoster .wrap {
-    display: flex;
-  }
-  #attendanceRoster .attendanceCol {
-    flex: 1 1;
-    margin: 0;
-  }
-}
-/* 
-	Slotting tool
-*/
-#slotTool {
-  background: #fff;
-  margin-bottom: 30px;
-  padding: 40px;
-}
-
-.slotToolSlot {
-  height: 30px;
-  line-height: 30px;
-  margin-bottom: 10px;
-  position: relative;
-  text-align: left;
-}
-.slotToolSlot form {
-  display: inline-block;
-  height: 30px;
-}
-.slotToolSlot.slotIconCanDelete {
-  position: relative;
-  z-index: 400;
-}
-.slotToolSlot.slotIconCanDelete:before {
-  background: #fff url(images/icon-minus.svg);
-  background-size: 100%;
-  border: 1px solid #fff;
-  border-radius: 40px;
-  content: "";
-  height: 15px;
-  pointer-events: none;
-  position: absolute;
-  top: -4px;
-  left: -4px;
-  width: 15px;
-  z-index: 500;
-}
-
-input[type=submit].slotIcon {
-  background: #fff;
-  background-size: cover;
-  border: 2px solid #000;
-  border-radius: 100%;
-  box-sizing: border-box;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 0;
-  height: 30px;
-  margin-right: 10px;
-  padding: 0;
-  position: relative;
-  vertical-align: top;
-  width: 30px;
-}
-input[type=submit].slotIcon.disabled {
-  cursor: not-allowed;
-}
-
-#slotToolButtons {
-  padding: 30px;
-  text-align: center;
-}
-#slotToolButtons a {
-  margin: 0 10px;
-}
-#slotToolButtons br {
-  display: none;
-}
-
-.unit {
-  margin-bottom: 30px;
-}
-
-/* 
 	ACF Extended
 */
 .acf-field input[type=text],
@@ -2639,7 +2480,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.68
+Version: 1.70
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -3216,7 +3057,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.68
+Version: 1.70
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -3272,7 +3113,7 @@ Primary Branch: main
   padding: 0 0 50px 0;
 }
 #intention-events-single-event .container {
-  max-width: 800px;
+  max-width: 1200px;
 }
 #intention-events-single-event .event-banner {
   background: #222;
@@ -3354,4 +3195,177 @@ Primary Branch: main
 }
 .intention-events-listing-navigation.future .page-numbers.prev {
   float: left;
+}
+
+/* 
+	Briefing
+*/
+.tcb_briefing {
+  background: #fff;
+  margin-bottom: 30px;
+  padding: 40px;
+}
+.tcb_briefing .briefing-meta {
+  padding-bottom: 15px;
+}
+.tcb_briefing .briefing-meta .column {
+  padding-right: 20px;
+}
+.tcb_briefing .briefing-meta .column:first-child {
+  margin-left: 0;
+}
+.tcb_briefing .missionRow {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
+.tcb_briefing h3 {
+  margin-bottom: 10px;
+}
+
+/*
+	Attendance panel
+*/
+#attendanceRoster {
+  background: #fff;
+  margin-bottom: 30px;
+  padding: 30px;
+  transition: all 0.2s linear;
+}
+#attendanceRoster a,
+#attendanceRoster input,
+#attendanceRoster img {
+  transition: all 0.2s linear;
+}
+#attendanceRoster .attendanceCol {
+  border: 1px solid #ccc;
+  margin-bottom: 20px;
+  padding: 10px 10px 80px 10px;
+  position: relative;
+}
+#attendanceRoster .attendanceCol:nth-child(2) {
+  border-left: 0;
+  border-right: 0;
+}
+#attendanceRoster .attendanceCol form {
+  margin: 0;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 100%;
+}
+#attendanceRoster .attendanceCol form input {
+  padding: 10px;
+}
+#attendanceRoster ul {
+  list-style: none;
+  margin: 0 0 30px 0;
+}
+#attendanceRoster ul li {
+  height: 20px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+#attendanceRoster ul li a {
+  display: inline-block;
+  line-height: 20px;
+}
+#attendanceRoster img {
+  border-radius: 100%;
+  height: 20px;
+  margin-right: 3px;
+  vertical-align: top;
+  width: 20px;
+}
+
+@media only screen and (min-width: 1200px) {
+  #attendanceRoster {
+    float: left;
+    margin-right: 1%;
+    padding: 40px;
+    width: 59%;
+  }
+  #attendanceRoster .wrap {
+    display: flex;
+  }
+  #attendanceRoster .attendanceCol {
+    flex: 1 1;
+    margin: 0;
+  }
+}
+/* 
+	Slotting tool
+*/
+#slotTool {
+  background: #fff;
+  float: left;
+  margin-left: 1%;
+  margin-bottom: 30px;
+  padding: 40px;
+  width: 39%;
+}
+
+.slotToolSlot {
+  height: 30px;
+  line-height: 30px;
+  margin-bottom: 10px;
+  position: relative;
+  text-align: left;
+}
+.slotToolSlot form {
+  display: inline-block;
+  height: 30px;
+}
+.slotToolSlot.slotIconCanDelete {
+  position: relative;
+  z-index: 400;
+}
+.slotToolSlot.slotIconCanDelete:before {
+  background: #fff url(images/icon-minus.svg);
+  background-size: 100%;
+  border: 1px solid #fff;
+  border-radius: 40px;
+  content: "";
+  height: 15px;
+  pointer-events: none;
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  width: 15px;
+  z-index: 500;
+}
+
+input[type=submit].slotIcon {
+  background: #fff;
+  background-size: cover;
+  border: 2px solid #000;
+  border-radius: 100%;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0;
+  height: 30px;
+  margin-right: 10px;
+  padding: 0;
+  position: relative;
+  vertical-align: top;
+  width: 30px;
+}
+input[type=submit].slotIcon.disabled {
+  cursor: not-allowed;
+}
+
+#slotToolButtons {
+  padding: 30px;
+  text-align: center;
+}
+#slotToolButtons a {
+  margin: 0 10px;
+}
+#slotToolButtons br {
+  display: none;
+}
+
+.unit {
+  margin-bottom: 30px;
 }
