flip mission panels

--- a/sass/_events.scss
+++ b/sass/_events.scss
@@ -222,7 +222,7 @@
 
 @media only screen and (min-width: 1200px) {
 	#attendanceRoster {
-		float:left;
+		float: right;
 		margin-right: 1%;
 		padding: 40px;
 		width: 59%;
@@ -242,7 +242,7 @@
 
 #slotTool {
 	background: #fff;
-	float:left;
+	float: left;
 	margin-left: 1%;
 	margin-bottom: 30px;
 	padding: 40px;
