--- a/style.css
+++ b/style.css
@@ -5,11 +5,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-<<<<<<< HEAD
-Version: 1.70
-=======
-Version: 1.69
->>>>>>> main
+Version: 1.71
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -182,11 +178,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-<<<<<<< HEAD
-Version: 1.70
-=======
-Version: 1.69
->>>>>>> main
+Version: 1.71
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -2488,11 +2480,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-<<<<<<< HEAD
-Version: 1.70
-=======
-Version: 1.69
->>>>>>> main
+Version: 1.71
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -3069,11 +3057,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-<<<<<<< HEAD
-Version: 1.70
-=======
-Version: 1.69
->>>>>>> main
+Version: 1.71
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -3296,7 +3280,7 @@ Primary Branch: main
 
 @media only screen and (min-width: 1200px) {
   #attendanceRoster {
-    float: left;
+    float: right;
     margin-right: 1%;
     padding: 40px;
     width: 59%;
