--- a/style.css
+++ b/style.css
@@ -528,7 +528,7 @@ a:visited {
 
 a:hover,
 a:focus {
-  color: rgb(46.9620853081, 139.8151658768, 215.0379146919);
+  color: #222;
   transition: all 0.2s linear;
 }
 
@@ -819,6 +819,7 @@ input::-moz-focus-inner {
   padding: 0;
 }
 
+button,
 .button,
 .button:visited,
 .btn,
@@ -834,6 +835,7 @@ input[type=button] {
   display: inline-block;
   font-family: "D-DIN", arial, sans-serif;
   font-size: 13.5px;
+  font-weight: 400;
   line-height: 1.2;
   overflow: visible;
   padding: 15px 30px;
@@ -842,6 +844,7 @@ input[type=button] {
   -webkit-appearance: none;
 }
 
+button:hover,
 .button:hover,
 .btn:hover,
 input[type=submit]:hover,
@@ -852,6 +855,7 @@ input[type=button]:hover {
   transition: all 0.2s linear;
 }
 
+button:active,
 .button:active,
 .button:focus,
 .btn:active,
@@ -915,7 +919,7 @@ select {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  color: #777;
+  color: #333;
   display: block;
   font-family: "D-DIN", arial, sans-serif;
   font-size: 13.5px;
@@ -1014,10 +1018,10 @@ input[type=checkbox] {
 }
 
 .container .one,
-.container .two.columns,
+.container .two,
 .container .three,
 .container .four,
-.container .five.columns,
+.container .five,
 .container .six,
 .container .seven,
 .container .eight,
@@ -1031,14 +1035,14 @@ input[type=checkbox] {
 .container .one-third,
 .container .two-thirds {
   margin: 0;
-  width: 100%;
+  flex: 0 0 100%;
 }
 
 .row {
   margin: 0 0 2% 0;
 }
 
-/* Grid > 600px */
+/* Grid > 800px */
 @media only screen and (min-width: 800px) {
   .container {
     background: transparent;
@@ -1214,22 +1218,25 @@ body.mobilenavopen {
 }
 
 .darkHeader #header {
-  color: #fff;
+  color: #ddd;
 }
 .darkHeader #header svg path {
   fill: #fff;
 }
 .darkHeader #header #headerLogin {
-  color: #fff;
+  color: #ddd;
 }
 .darkHeader #header #headerLogin a {
+  color: #ddd;
+}
+.darkHeader #header #headerLogin a:hover {
   color: #fff;
 }
 .darkHeader #header #nav2 a {
-  color: #fff;
+  color: #ddd;
 }
 .darkHeader #header #nav2 a:hover {
-  color: #2271b1;
+  color: #fff;
 }
 .darkHeader #header #nav2 .menu-item-has-children > a:after {
   background-image: url(images/icon-chev-down-white.svg);
@@ -1277,6 +1284,9 @@ body.mobilenavopen {
   }
   #header.scrollHeader #headerLogin a {
     color: #2271b1;
+  }
+  #header.scrollHeader #headerLogin a:hover {
+    color: #222;
   }
 }
 @media only screen and (min-width: 1200px) {
@@ -2182,7 +2192,14 @@ body.mobilenavopen {
   text-align: center;
 }
 #footer a {
+  color: #ddd;
   text-transform: uppercase;
+}
+#footer a:visited {
+  color: #ddd;
+}
+#footer a:hover {
+  color: #fff;
 }
 #footer h3 {
   color: #fff;
@@ -2204,7 +2221,7 @@ body.mobilenavopen {
   width: 30px;
 }
 .btt path {
-  fill: #eee;
+  fill: #ddd;
   transition: color 0.2s linear;
 }
 .btt a:hover path {
@@ -2382,7 +2399,7 @@ html .wcpt-product-form select {
   width: auto;
 }
 .social a path {
-  fill: #ccc;
+  fill: #ddd;
   transition: all 0.2s linear;
 }
 .social a:hover path {
@@ -2499,7 +2516,11 @@ Primary Branch: main
 #wikiSearch .wrapper {
   background: #fff;
 }
-#wikiSearch #s {
+#wikiSearch #searchform #search {
+  right: 60px;
+}
+#wikiSearch #searchform #s {
+  border: none;
   padding-left: 15px;
 }
 #wikiSearch #datafetch {
@@ -3144,15 +3165,24 @@ Primary Branch: main
   z-index: 200;
 }
 #intention-events-single-event .event-banner .event-image {
+  height: 400px;
   margin: 0;
   position: relative;
   z-index: 100;
 }
-#intention-events-single-event .event-banner .event-image img {
-  display: block;
+#intention-events-single-event .event-banner .event-image picture {
+  display: flex;
+  height: 100%;
   width: 100%;
 }
+#intention-events-single-event .event-banner .event-image img {
+  height: 100%;
+  max-width: 9999px;
+  width: 100%;
+  object-fit: cover;
+}
 #intention-events-single-event .event-banner .inner {
+  padding: 0 20px;
   position: absolute;
   top: 60%;
   left: 0;
@@ -3174,6 +3204,16 @@ Primary Branch: main
   content: "";
 }
 
+@media only screen and (min-width: 1200px) {
+  #intention-events-single-event .event-banner .event-image {
+    height: auto;
+  }
+  #intention-events-single-event .event-banner .event-image img {
+    display: block;
+    max-width: 100%;
+    width: 100%;
+  }
+}
 .intention-events-listing-navigation {
   display: table;
   padding: 30px 0;
@@ -3220,6 +3260,7 @@ Primary Branch: main
   padding-bottom: 20px;
 }
 .tcb_briefing h3 {
+  padding-top: 15px;
   margin-bottom: 10px;
 }
 
@@ -3240,7 +3281,7 @@ Primary Branch: main
 #attendanceRoster .attendanceCol {
   border: 1px solid #ccc;
   margin-bottom: 20px;
-  padding: 10px 10px 80px 10px;
+  padding: 15px 15px 80px 15px;
   position: relative;
 }
 #attendanceRoster .attendanceCol:nth-child(2) {
@@ -3356,6 +3397,7 @@ input[type=submit].slotIcon.disabled {
 }
 
 #slotToolButtons {
+  clear: both;
   padding: 30px;
   text-align: center;
 }
