--- a/sass/_events.scss
+++ b/sass/_events.scss
@@ -246,23 +246,53 @@
 		vertical-align: top;
 		width: 20px;
 	}
-}
-
-@media only screen and (min-width: 1200px) {
-	#attendanceRoster {
-		float: right;
-		margin-left: 1%;
-		padding: 40px;
-		width: 59%;
-		.wrap {
-			display: flex;
+	input[type="submit"] {
+		
+	}
+	.spinner {
+			-webkit-animation: fa-spin 1s infinite linear;
+		animation: fa-spin 1s infinite linear;
+		background: url(images/icon-refresh5.svg); 
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-size: auto 100%;
+		display: none;
+		height: 25px;
+		position: absolute;
+			bottom: 10px;
+			left: 40px;
+		width: 25px;
+		&.reg {
+			left: 30px;
 		}
-		.attendanceCol {
-			flex: 1 1;
-			margin: 0;
+	}
+	.loading {
+		position: relative;
+		.spinner {
+			display: block;
+		}
+		input[type="submit"] {
+			background: vars.$colour-link;
+			color: vars.$colour-link;
 		}
 	}
 }
+
+	@media only screen and (min-width: 1200px) {
+		#attendanceRoster {
+			float: right;
+			margin-left: 1%;
+			padding: 40px;
+			width: 59%;
+			.wrap {
+				display: flex;
+			}
+			.attendanceCol {
+				flex: 1 1;
+				margin: 0;
+			}
+		}
+	}
 
 /* 
 	Slotting tool
@@ -275,57 +305,82 @@
 	margin-bottom: 30px;
 	padding: 40px;
 	width: 39%;
-}
-
-.slotToolSlot {
-	height: 30px;
-	line-height: 30px;
-	margin-bottom: 10px;
-	position: relative;
-	text-align: left;
-	form {
-		display: inline-block;
+	
+	.slotToolSlot {
 		height: 30px;
-	}
-	&.slotIconCanDelete {
+		line-height: 30px;
+		margin-bottom: 10px;
 		position: relative;
-		z-index: 400;
-		&:before {
-			background: #fff url(images/icon-minus.svg);
-			background-size: 100%;
-			border: 1px solid #fff;
-			border-radius: 40px;
-			content: "";
-			height: 15px;
-			pointer-events: none;
-			position: absolute;
-				top: -4px;
-				left: -4px;
-			width: 15px;
-			z-index: 500;
+		text-align: left;
+		form {
+			display: inline-block;
+			height: 30px;
+		}
+		input[type="submit"].slotIcon {
+			background: #fff;
+			background-size: cover;
+			border: 2px solid #000;
+			border-radius: 100%;
+			box-sizing: border-box;
+			cursor: pointer;
+			display: inline-block;
+			font-size: 0;
+			height: 30px;
+			margin-right: 10px;
+			padding: 0;
+			position: relative;
+			vertical-align: top;
+			width: 30px;
+			&.disabled {
+				cursor: not-allowed;
+			}
+		}
+		
+		&.loading {
+			.slotForm {
+				pointer-events: none;
+				position: relative;
+			}
+			&:after {
+					-webkit-animation: fa-spin 1s infinite linear;
+				animation: fa-spin 1s infinite linear;
+				background: url(images/icon-refresh4.svg); 
+				background-repeat: no-repeat;
+				background-position: center center;
+				background-size: auto 100%;
+				content: "";
+				height: 25px;
+				position: absolute;
+					top: 3px;
+					left: 3px;
+				width: 25px;
+			}
+		}
+		
+		&.slotIconCanDelete {
+			position: relative;
+			z-index: 400;
+			&:before {
+				background: #fff url(images/icon-minus.svg);
+				background-size: 100%;
+				border: 1px solid #fff;
+				border-radius: 40px;
+				content: "";
+				height: 15px;
+				pointer-events: none;
+				position: absolute;
+					top: -4px;
+					left: -4px;
+				width: 15px;
+				z-index: 500;
+			}
 		}
 	}
-}
-
-input[type="submit"].slotIcon {
-	background: #fff;
-	background-size: cover;
-	border: 2px solid #000;
-	border-radius: 100%;
-	box-sizing: border-box;
-	cursor: pointer;
-	display: inline-block;
-	font-size: 0;
-	height: 30px;
-	margin-right: 10px;
-	padding: 0;
-	position: relative;
-	vertical-align: top;
-	width: 30px;
-	&.disabled {
-		cursor: not-allowed;
+	.unit {
+		margin-bottom: 30px;
 	}
 }
+
 
 #slotToolButtons {
 	clear: both;
@@ -337,8 +392,4 @@ input[type="submit"].slotIcon {
 	br {
 		display: none;
 	}
-}
-
-.unit {
-	margin-bottom: 30px;
 }
