--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2186,6 +2186,11 @@ body.mobilenavopen {
 	h3 {
 		color: #fff;
 	}
+	.copyright {
+		p {
+			display: inline;
+		}
+	}
 }
 
 .btt {
@@ -2473,23 +2478,3 @@ ul.acf-checkbox-list li {
 	}
 }
 
-.slotToolSlot.loading {
-	.slotForm {
-		pointer-events: none;
-		position: relative;
-	}
-	&:after {
-			-webkit-animation: fa-spin 1s infinite linear;
-		animation: fa-spin 1s infinite linear;
-		background: url(images/icon-refresh4.svg); 
-		background-repeat: no-repeat;
-		background-position: center center;
-		background-size: auto 100%;
-		content: "";
-		height: 25px;
-		position: absolute;
-			top: 3px;
-			left: 3px;
-		width: 25px;
-	}
-}
